--- a/client/src/componenets/Nav.css
+++ b/client/src/componenets/Nav.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+ul{
+  padding-left: 0;
+}
+
 /* navbar  */
 
 @import url('http://fonts.cdnfonts.com/css/a-atmospheric');
