--- a/client/src/pages/home/home-page.css
+++ b/client/src/pages/home/home-page.css
@@ -5,10 +5,13 @@
 }
 
 body {
-  background: url(../../images/background.jpeg);
+  background: #010031;
   height: 1024px;
 }
 
+.home-page-body .home-page-image {
+  z-index: 1;
+}
 
 /* home page body */
 
@@ -86,10 +89,6 @@ body {
   filter: drop-shadow(2px 5px 100px rgba(27, 245, 255,0.35));
 }
 
-.stars {
-  width: 100%;
-}
-
 .timer {
   margin-top: -40px;
   position: relative;
@@ -105,6 +104,359 @@ body {
 .dhms {
   margin-top: 160px;
 }
+
+/* /////////////////////////////////////////////////// */
+
+
+.night {
+  position: relative;
+  z-index: -1;
+  margin-top: -350px;
+  width: 100%;
+  height: 95vw;
+  -webkit-transform: rotateZ(270deg);
+          transform: rotateZ(270deg);
+}
+
+.shooting_star {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 2px;
+  background: linear-gradient(270deg, #18FFFF 0.01%, #1BF5FF 0.72%, #25DAFF 1.91%, #33AFFF 3.46%, #4873FF 5.28%, #6227FF 7.33%, #651FFF 7.54%, #D500F9 15.31%, rgba(0, 0, 0, 0) 100%);
+  border-radius: 999px;
+  -webkit-filter: drop-shadow(0 0 6px #699bff);
+          filter: drop-shadow(0 0 6px #699bff);
+  -webkit-animation: tail 3000ms ease-in-out infinite, shooting 3000ms ease-in-out infinite;
+          animation: tail 3000ms ease-in-out infinite, shooting 3000ms ease-in-out infinite;
+}
+.shooting_star::before, .shooting_star::after {
+  content: "";
+  position: absolute;
+  top: calc(50% - 1px);
+  right: 0;
+  height: 2px;
+  background: #18FFFF;
+  -webkit-transform: translateX(50%) rotateZ(45deg);
+          transform: translateX(50%) rotateZ(45deg);
+  border-radius: 100%;
+  -webkit-animation: shining 3000ms ease-in-out infinite;
+          animation: shining 3000ms ease-in-out infinite;
+}
+.shooting_star::after {
+  -webkit-transform: translateX(50%) rotateZ(-45deg);
+          transform: translateX(50%) rotateZ(-45deg);
+}
+.shooting_star:nth-child(1) {
+  /* top: calc(-50% - -119px); */
+  top: 5%;
+  left: calc(50% - 43px);
+  -webkit-animation-delay: 4796ms;
+          animation-delay: 4796ms;
+}
+.shooting_star:nth-child(1)::before, 
+.shooting_star:nth-child(1)::after {
+  -webkit-animation-delay: 4796ms;
+          animation-delay: 4796ms;
+}
+.shooting_star:nth-child(2) {
+  /* top: calc(50% - -43px); */
+  top: 10%;
+  left: calc(50% - 37px);
+  -webkit-animation-delay: 5944ms;
+          animation-delay: 5944ms;
+}
+.shooting_star:nth-child(2)::before, 
+.shooting_star:nth-child(2)::after{
+  -webkit-animation-delay: 5944ms;
+          animation-delay: 5944ms;
+}
+.shooting_star:nth-child(3) {
+  /* top: calc(50% - -40px); */
+  top: 15%;
+  left: calc(50% - 222px);
+  -webkit-animation-delay: 7556ms;
+          animation-delay: 7556ms;
+}
+.shooting_star:nth-child(3)::before, 
+.shooting_star:nth-child(3)::after {
+  -webkit-animation-delay: 7556ms;
+          animation-delay: 7556ms;
+}
+.shooting_star:nth-child(4) {
+  /* top: calc(50% - -29px); */
+  top: 20%;
+  left: calc(50% - 113px);
+  -webkit-animation-delay: 7123ms;
+          animation-delay: 7123ms;
+}
+.shooting_star:nth-child(4)::before, 
+.shooting_star:nth-child(4)::after{
+  -webkit-animation-delay: 7123ms;
+          animation-delay: 7123ms;
+}
+.shooting_star:nth-child(5) {
+  /* top: calc(50% - 146px); */
+  top: 25%;
+  left: calc(50% - 112px);
+  -webkit-animation-delay: 3629ms;
+          animation-delay: 3629ms;
+}
+.shooting_star:nth-child(5)::before, 
+.shooting_star:nth-child(5)::after{
+  -webkit-animation-delay: 3629ms;
+          animation-delay: 3629ms;
+}
+.shooting_star:nth-child(6) {
+  /* top: calc(50% - -108px); */
+  top: 30%;
+  left: calc(50% - 160px);
+  -webkit-animation-delay: 3895ms;
+          animation-delay: 3895ms;
+}
+.shooting_star:nth-child(6)::before, 
+.shooting_star:nth-child(6)::after {
+  -webkit-animation-delay: 3895ms;
+          animation-delay: 3895ms;
+}
+.shooting_star:nth-child(7) {
+  /* top: calc(50% - 52px); */
+  top: 35%;
+  left: calc(50% - 72px);
+  -webkit-animation-delay: 7326ms;
+          animation-delay: 7326ms;
+}
+.shooting_star:nth-child(7)::before, 
+.shooting_star:nth-child(7)::after{
+  -webkit-animation-delay: 7326ms;
+          animation-delay: 7326ms;
+}
+.shooting_star:nth-child(8) {
+  /* top: calc(50% - 55px); */
+  top: 40%;
+  left: calc(50% - 282px);
+  -webkit-animation-delay: 956ms;
+          animation-delay: 956ms;
+}
+.shooting_star:nth-child(8)::before, 
+.shooting_star:nth-child(8)::after {
+  -webkit-animation-delay: 956ms;
+          animation-delay: 956ms;
+}
+.shooting_star:nth-child(9) {
+  /* top: calc(50% - 129px); */
+  top: 45%;
+  left: calc(50% - 296px);
+  -webkit-animation-delay: 5030ms;
+          animation-delay: 5030ms;
+}
+.shooting_star:nth-child(9)::before, 
+.shooting_star:nth-child(9)::after{
+  -webkit-animation-delay: 5030ms;
+          animation-delay: 5030ms;
+}
+.shooting_star:nth-child(10) {
+  /* top: calc(50% - 131px); */
+  top: 50%;
+  left: calc(50% - 249px);
+  -webkit-animation-delay: 1150ms;
+          animation-delay: 1150ms;
+}
+.shooting_star:nth-child(10)::before, 
+.shooting_star:nth-child(10)::after {
+  -webkit-animation-delay: 1150ms;
+          animation-delay: 1150ms;
+}
+.shooting_star:nth-child(11) {
+  /* top: calc(50% - 32px); */
+  top: 55%;
+  left: calc(50% - 13px);
+  -webkit-animation-delay: 157ms;
+          animation-delay: 157ms;
+}
+.shooting_star:nth-child(11)::before, 
+.shooting_star:nth-child(11)::after {
+  -webkit-animation-delay: 157ms;
+          animation-delay: 157ms;
+}
+.shooting_star:nth-child(12) {
+  /* top: calc(50% - -57px); */
+  top: 60%;
+  left: calc(50% - 165px);
+  -webkit-animation-delay: 3364ms;
+          animation-delay: 3364ms;
+}
+.shooting_star:nth-child(12)::before, 
+.shooting_star:nth-child(12)::after{
+  -webkit-animation-delay: 3364ms;
+          animation-delay: 3364ms;
+}
+.shooting_star:nth-child(13) {
+  /* top: calc(50% - 189px); */
+  top: 65%;
+  left: calc(50% - 213px);
+  -webkit-animation-delay: 6822ms;
+          animation-delay: 6822ms;
+}
+.shooting_star:nth-child(13)::before, 
+.shooting_star:nth-child(13)::after {
+  -webkit-animation-delay: 6822ms;
+          animation-delay: 6822ms;
+}
+.shooting_star:nth-child(14) {
+  /* top: calc(50% - -104px); */
+  top: 70%;
+  left: calc(50% - 163px);
+  -webkit-animation-delay: 9347ms;
+          animation-delay: 9347ms;
+}
+.shooting_star:nth-child(14)::before, 
+.shooting_star:nth-child(14)::after{
+  -webkit-animation-delay: 9347ms;
+          animation-delay: 9347ms;
+}
+.shooting_star:nth-child(15) {
+  /* top: calc(50% - -75px); */
+  top: 75%;
+  left: calc(50% - 234px);
+  -webkit-animation-delay: 4661ms;
+          animation-delay: 4661ms;
+}
+.shooting_star:nth-child(15)::before, 
+.shooting_star:nth-child(15)::after {
+  -webkit-animation-delay: 4661ms;
+          animation-delay: 4661ms;
+}
+.shooting_star:nth-child(16) {
+  /* top: calc(50% - 176px); */
+  top: 80%;
+  left: calc(50% - 51px);
+  -webkit-animation-delay: 6650ms;
+          animation-delay: 6650ms;
+}
+.shooting_star:nth-child(16)::before, 
+.shooting_star:nth-child(16)::after {
+  -webkit-animation-delay: 6650ms;
+          animation-delay: 6650ms;
+}
+.shooting_star:nth-child(17) {
+  /* top: calc(50% - -127px); */
+  top: 85%;
+  left: calc(50% - 171px);
+  -webkit-animation-delay: 3855ms;
+          animation-delay: 3855ms;
+}
+.shooting_star:nth-child(17)::before, 
+.shooting_star:nth-child(17)::after {
+  -webkit-animation-delay: 3855ms;
+          animation-delay: 3855ms;
+}
+.shooting_star:nth-child(18) {
+  /* top: calc(50% - -130px); */
+  top: 90%;
+  left: calc(50% - 295px);
+  -webkit-animation-delay: 6509ms;
+          animation-delay: 6509ms;
+}
+.shooting_star:nth-child(18)::before, 
+.shooting_star:nth-child(18)::after{
+  -webkit-animation-delay: 6509ms;
+          animation-delay: 6509ms;
+}
+.shooting_star:nth-child(19) {
+  /* top: calc(50% - -108px); */
+  top: 95%;
+  left: calc(50% - 209px);
+  -webkit-animation-delay: 1403ms;
+          animation-delay: 1403ms;
+}
+.shooting_star:nth-child(19)::before, 
+.shooting_star:nth-child(19)::after{
+  -webkit-animation-delay: 1403ms;
+          animation-delay: 1403ms;
+}
+.shooting_star:nth-child(20) {
+  /* top: calc(50% - -19px); */
+  top: 100%;
+  left: calc(50% - 9px);
+  -webkit-animation-delay: 5083ms;
+          animation-delay: 5083ms;
+}
+.shooting_star:nth-child(20)::before, 
+.shooting_star:nth-child(20)::after{
+  -webkit-animation-delay: 5083ms;
+          animation-delay: 5083ms;
+}
+
+@-webkit-keyframes tail {
+  0% {
+    width: 0;
+  }
+  30% {
+    width: 100px;
+  }
+  100% {
+    width: 0;
+  }
+}
+
+@keyframes tail {
+  0% {
+    width: 0;
+  }
+  30% {
+    width: 100px;
+  }
+  100% {
+    width: 0;
+  }
+}
+@-webkit-keyframes shining {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 30px;
+  }
+  100% {
+    width: 0;
+  }
+}
+@keyframes shining {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 5px;
+  }
+  100% {
+    width: 0;
+  }
+}
+@-webkit-keyframes shooting {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(300px);
+            transform: translateX(300px);
+  }
+}
+@keyframes shooting {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(300px);
+            transform: translateX(300px);
+  }
+}
+  
+
+/* /////////////////////////////////////////////////// */
+
 
 @media only screen and (max-width: 1200px) {
 
@@ -199,7 +551,6 @@ body {
     height: 450px;
     left: -100px;
     top: 30px;
-    z-index: -1;
   }
 
   .home-page-body{
