--- a/client/src/componenets/Nav.css
+++ b/client/src/componenets/Nav.css
@@ -4,10 +4,6 @@
   box-sizing: border-box;
 }
 
-ul{
-  padding-left: 0;
-}
-
 /* navbar  */
 
 @import url('http://fonts.cdnfonts.com/css/a-atmospheric');
@@ -45,6 +41,7 @@ ul{
 
 .navbar-list-item:hover {
   color: #18FFFF;
+  easy:
 }
 
 .hamburger{
