--- a/client/src/pages/about/about-page.css
+++ b/client/src/pages/about/about-page.css
@@ -6,72 +6,62 @@
 
 body {
   background: url(../../images/background.jpeg);
-  height: 1024px;
+  height: 20vh
 }
 
+@import url("http://fonts.cdnfonts.com/css/a-atmospheric");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
-/* home page body */
-
-@import url('http://fonts.cdnfonts.com/css/a-atmospheric');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-
-.home-page-body{
-  margin-left: 50vw;
+.about-page-body {
+  margin-left: 10vw;
   text-align: center;
 }
 
-.about-heading
-{
+.about-heading {
   /* ABOUT THE EVENT */
 
-position: absolute;
-width: 368px;
-height: 90px;
-left: 148px;
-top: 162px;
+  position: absolute;
+  width: 368px;
+  height: 90px;
+  left: 148px;
+  top: 162px;
 
-font-family: Poppins;
-font-style: normal;
-font-weight: 500;
-font-size: 40px;
-line-height: 90px;
-/* identical to box height, or 225% */
-text-align: center;
-letter-spacing: 0.05em;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 90px;
+  /* identical to box height, or 225% */
+  text-align: center;
+  letter-spacing: 0.05em;
 
-color: #18FFFF;
-
-
+  color: #18ffff;
 }
 
-.about-para-1
-{
-  /* Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. */
-  
+.about-para-1 {
   position: absolute;
   width: 740px;
   height: 234px;
-left: 541px;
-top: 300px;
+  left: 541px;
+  top: 300px;
 
-font-family: Poppins;
-font-style: normal;
-font-weight: 500;
-font-size: 20px;
-line-height: 30px;
-letter-spacing: 0.05em;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.05em;
 
-color: #BF00FF;
+  color: #bf00ff;
 }
-.about-para-2
-{
+.about-para-2 {
   position: absolute;
   width: 740px;
   height: 234px;
   left: 177px;
   top: 636px;
-  
+
   font-family: Poppins;
   font-style: normal;
   font-weight: 500;
@@ -79,253 +69,111 @@ color: #BF00FF;
   line-height: 30px;
   text-align: right;
   letter-spacing: 0.05em;
-  
-  color: #BF00FF;
-  
+
+  color: #bf00ff;
 }
 
-.about-para1-img
-{
+.aboutPageParaImg1 {
   position: absolute;
   width: 319px;
   height: 172px;
   left: 156px;
   top: 300px;
-  
 }
-.about-para2-img
-{
+.aboutPageParaImg2 {
   position: absolute;
-width: 306px;
-height: 251px;
-left: 986px;
-top: 594px;
-
+  width: 306px;
+  height: 251px;
+  left: 986px;
+  top: 594px;
 }
 
-.exodus-logo {
-  font-family: 'a Atmospheric', sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 75px;
-  line-height: 90px;
-  text-align: center;
-  letter-spacing: 0.12em;
-  color: #BF00FF;
-}
-
-.tag-line {
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 35px;
-  line-height: 52px;
-  text-align: center;
-  letter-spacing: 0.05em;
-  color: #BF00FF;
-  margin-top: 25px;
-}
-
-.home-page-buttons {
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: 30px;
-}
-
-.home-page-buttons a {
-  text-decoration: none;
-  text-align: center;
-}
-
-.home-page-buttons div {
-  text-transform: uppercase;
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 28px;
-  line-height: 72px;
-  text-align: center;
-  color: rgba(24, 255, 255, 0.8);
-  background: #010031;
-  box-shadow: 1px 1px 20px rgba(24, 255, 255, 0.5);
-  border-radius: 15px;
-  width: 175px;
-  height: 72px;
-  transition: 200ms;
-}
-
-.home-page-buttons div:hover {
-  color: #18FFFF;
-}
-
-.home-page-image {
-  border-radius: 50%;
-  position: absolute;
-  width: 750px;
-  height: 750px;
-  left: -110px;
-  top: -110px;
-  filter: drop-shadow(2px 5px 100px rgba(27, 245, 255,0.35));
-}
-
-.stars {
-  width: 100%;
-}
-
-.timer {
-  margin-top: -40px;
-  position: relative;
-}
-
-.timer-circles, .timer-colons {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateY(-50%) translateX(-50%);
-}
-
-.dhms {
-  margin-top: 160px;
-}
-
-@media only screen and (max-width: 1200px) {
-
-  .exodus-logo {
-    font-size: 55px;
-    line-height: 90px;
-    color: #BF00FF;
-  }
-
-  .home-page-image {
-    width: 600px;
-    height: 600px;
-    left: -87px;
-    top: -87px;
-  }
-
-  .tag-line {
-    font-size: 30px;
-  }
-
-  .home-page-buttons div {
-    font-size: 21px;
-    line-height: 50px;
-    border-radius: 13px;
-    width: 140px;
-    height: 50px;
-  }
-
+/* @media only screen and (max-width: 1200px) {
 }
 
 @media only screen and (max-width: 992px) {
-
-  .exodus-logo {
-    font-size: 28px;
-    line-height: 50px;
-    color: #BF00FF;
-  }
-
-  .home-page-image {
-    width: 400px;
-    height: 400px;
-    left: -57px;
-    top: -57px;
-  }
-
-  .tag-line {
-    font-size: 20px;
-    margin-top: 15px;
-  }
-
-  .home-page-buttons div {
-    font-size: 21px;
-    line-height: 50px;
-    border-radius: 13px;
-    width: 140px;
-    height: 50px;
-  }
-
-  .home-page-buttons div {
-    font-size: 12px;
-    line-height: 25px;
-    border-radius: 8px;
-    width: 80px;
-    height: 25px;
-    margin: 8px;
-  }
-
-  .home-page-buttons {
-    margin-top: -10px;
-  }
-
-  .timer-circles{
-    width: 250px;
-  }
-
-  .timer-colons {
-    width: 145px;
-  }
-
-  .dhms{
-    width: 217px;
-    margin-top: 80px;
-  }
-
-}
+} */
 
 @media only screen and (max-width: 576px) {
+  .about-heading {
+    /* ABOUT THE EVENT */
 
-  .home-page-image{
     position: absolute;
-    width: 450px;
-    height: 450px;
-    left: -100px;
-    top: 30px;
-    z-index: -1;
-  }
+    width: 223px;
+    height: 61px;
+    left: 40px;
+    top: 45px;
 
-  .home-page-body{
-    margin-left: 0;
-  }
-
-  .exodus-logo {
-    display: none;
-  }
-
-  .tag-line {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
     font-size: 22px;
-    line-height: 33px;
-    margin-bottom: 10px;
-    margin-top: 440px;
+    line-height: 90px;
+    /* or 409% */
+    text-align: center;
+    letter-spacing: 0.05em;
+    
+    color: #18ffff;
   }
 
-  .timer-circles{
-    width: 272px;
-    height: 50px;
+  .aboutPageParaImg1 {
+    position: absolute;
+    left: 50px;
+    right: 30px;
+    top: 100px;
+    bottom: 20px;
+
+    background: #3f3d56;
+    
+    position: absolute;
+    width: 162.75px;
+    height: 117px;
+    left: 130px;
+    top: 143px;
+    
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  }
+  .about-para-1 {
+    position: absolute;
+    width: 336px;
+    height: 227px;
+    left: 50px;
+    top: 278px;
+    
+    text-align: center;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 21px;
+    letter-spacing: 0.05em;
+
+    color: #bf00ff;
   }
 
-  .timer-colons {
-    width: 155px;
+  .aboutPageParaImg2 {
+    position: absolute;
+    width: 158px;
+    height: 129px;
+    left: 139px;
+    top: 501px;
   }
-
-  .dhms{
-    width: 240px;
-    height: 33px;
-    margin-top: 100px;
-    margin-bottom: 20px;
+  
+  .about-para-2 {
+    position: absolute;
+    width: 336px;
+    height: 227px;
+    left: 51px;
+    top: 639px;
+    
+    text-align: center;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 21px;
+    letter-spacing: 0.05em;
+    
+    color: #bf00ff;
   }
-
-  .home-page-buttons {
-    flex-direction: column;
-  }
-
-  .home-page-buttons div {
-    width: 150px;
-    height: 60px;
-    border-radius: 15px;
-    font-size: 22px;
-    line-height: 60px;
-    margin: 20px auto;
-  }
-
 }
