--- a/client/src/pages/home/home-page.css
+++ b/client/src/pages/home/home-page.css
@@ -5,10 +5,13 @@
 }
 
 body {
-  background: url(../../images/background.jpeg);
+  background: #010031;
   height: 1024px;
 }
 
+.home-page-body .home-page-image {
+  z-index: 1;
+}
 
 /* home page body */
 
@@ -86,156 +89,23 @@ body {
   filter: drop-shadow(2px 5px 100px rgba(27, 245, 255,0.35));
 }
 
-
-.stars {
-  width: 100%;
-}
-
 .timer {
   margin-top: -40px;
   position: relative;
 }
 
-.timer-colons {
+.timer-circles, .timer-colons {
   position: absolute;
-  top: 35%;
-  left: 30%;
+  top: 50%;
+  left: 50%;
   transform: translateY(-50%) translateX(-50%);
-
 }
 
 .dhms {
-  margin-top: 100px;
+  margin-top: 160px;
 }
 
-@media only screen and (max-width: 1200px) {
-
-  .exodus-logo {
-    font-size: 55px;
-    line-height: 90px;
-    color: #BF00FF;
-  }
-
-  .home-page-image {
-    width: 600px;
-    height: 600px;
-    left: -87px;
-    top: -87px;
-  }
-
-  .tag-line {
-    font-size: 30px;
-  }
-
-  .home-page-buttons div {
-    font-size: 21px;
-    line-height: 50px;
-    border-radius: 13px;
-    width: 140px;
-    height: 50px;
-  }
-
-}
-
-@media only screen and (max-width: 992px) {
-
-  .exodus-logo {
-    font-size: 28px;
-    line-height: 50px;
-    color: #BF00FF;
-  }
-
-  .home-page-image {
-    width: 400px;
-    height: 400px;
-    left: -57px;
-    top: -57px;
-  }
-
-  .tag-line {
-    font-size: 20px;
-    margin-top: 15px;
-  }
-
-  .home-page-buttons div {
-    font-size: 21px;
-    line-height: 50px;
-    border-radius: 13px;
-    width: 140px;
-    height: 50px;
-  }
-
-  .home-page-buttons div {
-    font-size: 12px;
-    line-height: 25px;
-    border-radius: 8px;
-    width: 80px;
-    height: 25px;
-    margin: 8px;
-  }
-
-  .home-page-buttons {
-    margin-top: -10px;
-  }
-
-  .timer-circles{
-    width: 250px;
-  }
-
-  .timer-colons {
-    width: 145px;
-  }
-
-  .dhms{
-    width: 217px;
-    margin-top: 80px;
-  }
-
-}
-
-@media only screen and (max-width: 576px) {
-
-  .home-page-image{
-    position: absolute;
-    width: 450px;
-    height: 450px;
-    left: -100px;
-    top: 30px;
-    z-index: -1;
-  }
-
-  .home-page-body{
-    margin-left: 0;
-  }
-
-  .exodus-logo {
-    display: none;
-  }
-
-  .tag-line {
-    font-size: 22px;
-    line-height: 33px;
-    margin-bottom: 10px;
-    margin-top: 440px;
-  }
-
-  .timer-circles{
-    width: 272px;
-    height: 50px;
-  }
-
-  .timer-colons {
-    width: 155px;
-  }
-
-  .dhms{
-    width: 240px;
-    height: 33px;
-    margin-top: 100px;
-    margin-bottom: 20px;
-  }
-
-/* Star animation */
+/* /////////////////////////////////////////////////// */
 
 
 .night {
@@ -559,7 +429,6 @@ body {
   50% {
     width: 5px;
   }
-
   100% {
     width: 0;
   }
@@ -589,9 +458,137 @@ body {
 /* /////////////////////////////////////////////////// */
 
 
-/* Star animation ends */
+@media only screen and (max-width: 1200px) {
 
+  .exodus-logo {
+    font-size: 55px;
+    line-height: 90px;
+    color: #BF00FF;
+  }
 
+  .home-page-image {
+    width: 600px;
+    height: 600px;
+    left: -87px;
+    top: -87px;
+  }
+
+  .tag-line {
+    font-size: 30px;
+    z-index: 1;
+  }
+
+  .home-page-buttons div {
+    font-size: 21px;
+    line-height: 50px;
+    border-radius: 13px;
+    width: 140px;
+    height: 50px;
+  }
+
+}
+
+@media only screen and (max-width: 992px) {
+
+  .exodus-logo {
+    font-size: 28px;
+    line-height: 50px;
+    color: #BF00FF;
+  }
+
+  .home-page-image {
+    width: 400px;
+    height: 400px;
+    left: -57px;
+    top: -57px;
+  }
+
+  .tag-line {
+    font-size: 20px;
+    margin-top: 15px;
+  }
+
+  .home-page-buttons div {
+    font-size: 21px;
+    line-height: 50px;
+    border-radius: 13px;
+    width: 140px;
+    height: 50px;
+  }
+
+  .home-page-buttons div {
+    font-size: 12px;
+    line-height: 25px;
+    border-radius: 8px;
+    width: 80px;
+    height: 25px;
+    margin: 8px;
+  }
+
+  .home-page-buttons {
+    margin-top: -10px;
+  }
+
+  .timer-circles{
+    width: 250px;
+  }
+
+  .timer-colons {
+    width: 145px;
+  }
+
+  .dhms{
+    width: 217px;
+    margin-top: 80px;
+  }
+
+}
+
+@media only screen and (max-width: 576px) {
+
+  body {
+    height: 150vh !important;
+  }
+
+  .home-page-image{
+    position: absolute;
+    width: 450px;
+    height: 450px;
+    left: -100px;
+    top: 30px;
+    z-index: 1 !important;
+  }
+
+  .home-page-body{
+    margin-left: 0;
+  }
+
+  .exodus-logo {
+    display: none;
+  }
+
+  .tag-line {
+    font-size: 22px;
+    line-height: 33px;
+    margin-bottom: 10px;
+    margin-top: 440px;
+  }
+
+  .timer-circles{
+    width: 272px;
+    height: 50px;
+  }
+
+  .timer-colons {
+    width: 155px;
+  }
+
+  .dhms{
+    width: 240px;
+    height: 33px;
+    margin-top: 100px;
+    margin-bottom: 20px;
+  }
 
   .home-page-buttons {
     flex-direction: column;
@@ -607,4 +604,3 @@ body {
   }
 
 }
-
