--- a/client/src/componenets/Nav.css
+++ b/client/src/componenets/Nav.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+ul{
+  padding-left: 0;
+}
+
 /* navbar  */
 
 @import url('http://fonts.cdnfonts.com/css/a-atmospheric');
@@ -41,7 +45,6 @@
 
 .navbar-list-item:hover {
   color: #18FFFF;
-  easy:
 }
 
 .hamburger{
@@ -106,9 +109,10 @@
   }
 
   .nav-bar {
+    position: relative;
     height: 66px;
     background: none #380764;
-    z-index: 1;
+    z-index: 2;
   }
 
   .navbar-list {
