--- a/client/src/pages/dashboard/Dashboard-right.css
+++ b/client/src/pages/dashboard/Dashboard-right.css
@@ -12,10 +12,12 @@
   
   .publicListHeading, .friendsHeading, .requestsHeading {
     display: block;
-    margin-bottom: 0.5vw;
-    font-size: 3vw;
+    margin-bottom: 0vw;
+    font-size: 2.5vw;
     text-align: center;
     color: white;
+    padding-top: 0;
+    line-height: 4vw;
   }
   
   .dashboard-right > div {
@@ -63,7 +65,7 @@
   .user-name {
     color: white;
     font-size: 1.5vw;
-    margin-bottom: 5px;
+    margin-bottom: 5px !important;
   }
   
   .discord-id {
