--- a/client/src/pages/faq/faq.css
+++ b/client/src/pages/faq/faq.css
@@ -92,6 +92,10 @@
   transition: transform 0.2s;
 }
 
+p{
+  margin-bottom: 1rem !important;
+}
+
 @media only screen and (max-width: 992px) {
 
   .faq-container > div{
