--- a/client/src/pages/login/Login.css
+++ b/client/src/pages/login/Login.css
@@ -16,7 +16,7 @@ body{
   vertical-align: middle;
 }
 
-.signup-container{
+.login-container{
   width: 80vw;
   margin-left: auto;
   margin-right: auto;
@@ -24,38 +24,36 @@ body{
   display: flex;
 }
 
-.signup h1 {
+.login h1 {
   color: white;
   text-align: center;
   font-size: 4vw;
-  margin-top: 4vh;
-  margin-bottom: 4vh;
-  padding-top: 0;
+  margin-top: 7vh;
 }
 
-.signup-image{
+.login-image{
   flex: 60%;
   background-color: grey;
 }
 
-.signup {
+.login {
   flex: 40%;
   background-color: #010031;
 }
 
-.signup > div {
+.login > div {
   
 }
 
 
 
-.email, .password, .username {
+.email, .password {
   display: flex;
   align-items: center;
   width: 70%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 1vh !important;
+  margin-top: 5vh;
 }
 
 label {
@@ -63,7 +61,7 @@ label {
   font-size: 2vw;
 }
 
-.email-error, .password-error, .username-error {
+.email-error, .password-error {
   color: red;
 }
 
@@ -83,59 +81,57 @@ input {
 input:focus {
   outline: none !important;
   border-color: white;
-  box-shadow: none;
 }
 
-.email-icon, .password-icon, .username-icon {
+.email-icon, .password-icon {
   font-size: 3vw;
   color: white;
   margin-right: 1.5vw;
 }
 
-.signup-button{
+button{
   text-align: center;
-  color: rgba(24, 255, 255, 0.8);
+  color: rgba(24, 255, 255, 0.8) !important;
   background: #010031;
   box-shadow: 1px 1px 20px rgba(24, 255, 255, 0.5);
-  border-radius: 15px;
-  font-size: 2vw;
+  border-radius: 15px !important;
+  font-size: 2vw !important;
   width: 10vw;
-  margin:auto;
+  margin:auto !important;
   display:block;
-  margin-top: 4vh;
+  margin-top: 8vh !important;
   border: none;
 }
 
-.signup-button:hover{
+button:hover{
   color: #18FFFF;
   border: none;
 }
 
 @media only screen and (max-width: 576px) {
-  .signup-image{
+  .login-image{
     display: none;
   }
 
-  .signup h1{
+  .login h1{
     font-size: 9vw;
   }
 
   label {
     font-size: 6vw;
-    margin-top: -5px;
   }
 
   input {
-    font-size: 4vw;
+    font-size: 4vw !important;
   }
 
-  .email-icon, .password-icon, .username-icon {
+  .email-icon, .password-icon {
     font-size: 8vw;
     margin-right: 3vw;
   }
 
-  .signup-button{
-    font-size: 6vw;
+  button{
+    font-size: 6vw !important;
     width: 30vw;
   }
 }
