--- a/client/src/componenets/Nav.css
+++ b/client/src/componenets/Nav.css
@@ -69,6 +69,7 @@ ul{
     font-size: 28px;
     line-height: 32px;
     letter-spacing: 0.12em;
+    margin-left: 48px;
 }
 
 @media only screen and (max-width: 1200px) {
