--- a/client/src/pages/dashboard/Dashboard-center.css
+++ b/client/src/pages/dashboard/Dashboard-center.css
@@ -8,7 +8,7 @@
 .nav-icons {
   margin-left: 1em;
   font-size: 2rem;
-  color: rgba(24, 255, 255, 0.8);
+  color: white;
 }
 
 .dashboard-btn {
@@ -21,8 +21,8 @@
   margin: 10px 10px 10px 10px;
   padding: 10px 15px 10px 15px;
   text-align: center;
-  color: rgba(24, 255, 255, 0.8);
-  background: #010031;
+  color: white;
+  background: #0b2159;
   box-shadow: 1px 1px 20px rgba(24, 255, 255, 0.5);
   border-radius: 15px;
   transition: 200ms;
