--- a/client/src/pages/home/home-page.css
+++ b/client/src/pages/home/home-page.css
@@ -2,15 +2,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-y: clip;
 }
 
-a:active, a:focus, a:hover {
-  text-decoration: none;
-}
 
 body {
   background: #010031;
   height: 1024px;
+  overflow-y: clip;
 }
 
 .home-page-body .exodus-image {
@@ -26,6 +25,7 @@ body {
 .home-page-body{
   margin-left: 50vw;
   text-align: center;
+  margin-top: -50px;
 }
 
 .exodus-logo {
@@ -47,7 +47,7 @@ body {
   line-height: 52px;
   text-align: center;
   letter-spacing: 0.05em;
-  color: #BF00FF;
+  color: silver;
   margin-top: 25px;
 }
 
@@ -72,7 +72,6 @@ body {
   text-align: center;
   color: rgba(24, 255, 255, 0.8);
   background: #010031;
-  box-shadow: 1px 1px 20px rgba(24, 255, 255, 0.5);
   border-radius: 15px;
   width: 175px;
   height: 72px;
@@ -115,7 +114,7 @@ body {
 .night {
   position: relative;
   z-index: -1;
-  margin-top: -350px;
+  margin-top: -1250px;
   width: 100%;
   height: 95vw;
   -webkit-transform: rotateZ(270deg);
@@ -608,3 +607,165 @@ body {
   }
 
 }
+
+/*Animation*/
+
+
+@import url("https://fonts.googleapis.com/css2?family=Sura:wght@400;700&display=swap");
+
+:root {
+--src: url('../../images/home-page-image.jpeg');
+--overlay-color: rgb(191, 0, 255);
+border-radius: 15px;
+--size: 80vmin;
+--space: 8vmin;
+--duration: 300ms;
+--ease-out: cubic-bezier(0.25, 1, 0.5, 1);
+--bounce-out: cubic-bezier(0.34, 1.56, 0.64, 1);
+}
+
+.promo {
+position: relative;
+cursor: pointer;
+width: var(--size);
+height: 150vh;
+--overlay-color: hotpink;
+margin-top: -460px;
+margin-left: 55px;
+border-radius: 100px;
+}
+
+.image-wrapper {
+width: var(--size);
+height: var(--size);
+overflow: hidden;
+clip-path: polygon(100% 0, 100% 50%, 100% 100%, 0% 100%, 0 50%, 0% 0%);
+transition: transform var(--duration) var(--ease-out),
+clip-path var(--duration) var(--ease-out);
+ } 
+
+.image-wrapper img {
+position: relative;
+width: 120%;
+height: 100%;
+object-fit: cover;
+transform: translateX(-10%);
+transition: transform var(--duration) var(--ease-out);
+}  
+
+.image-wrapper::after {
+content: "";
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: var(--overlay-color);
+mix-blend-mode: multiply;
+opacity: 0;
+transform: translateZ(0);
+transition: opacity var(--duration) var(--ease-out);
+}
+
+
+.promo:hover img {
+transform: translateX(0);
+}
+
+.promo:hover .image-wrapper {
+clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+transform: translateX(25%);
+transition-timing-function: var(--bounce-out);
+}
+
+
+.promo:hover .image-wrapper::after {
+opacity: 1;
+}
+
+
+
+/*Button Registration*/
+
+
+.noselect {
+  -webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+		-webkit-tap-highlight-color: transparent;
+}
+
+.button-register {
+  box-shadow: 0;
+	width: 210px;
+	height: 53px;
+	cursor: pointer;
+	border: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #7f5a83;
+	background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%);
+	background-size: 200% 100%;
+	background-position: left;
+	background-repeat: no-repeat;
+	transition: 500ms;
+}
+
+.button-register:before {
+	content: 'Register';
+	color: rgba(255,255,255,0.5);
+	font-size: 19px;
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 185px;
+	height: 40px;
+	background-color: #1b2845;
+	transition: 500ms;
+  border-radius: 5px;
+}
+
+.button-register:hover {
+	background-position: right;
+}
+
+.button-register:hover:before {
+	color: rgba(255,255,255,0.8);
+}
+
+.button-register:focus {
+	outline: none;
+}
+
+
+
+/*Font*/
+
+.text-div {
+    position: relative;
+    font-family: sans-serif;
+    text-transform: uppercase;
+    font-size: 4em;
+    letter-spacing: 4px;
+    overflow: hidden;
+    background: linear-gradient(90deg, #000, #fff, #000);
+    background-repeat: no-repeat;
+    background-size: 80%;
+    animation: animate 3s linear;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: rgba(255, 255, 255, 0);
+  }
+  
+  @keyframes animate {
+    0% {
+      background-position: -500%;
+    }
+    100% {
+      background-position: 500%;
+    }
+  }
