--- a/client/src/pages/login/Login.css
+++ b/client/src/pages/login/Login.css
@@ -91,8 +91,9 @@ input:focus {
 
 button{
   text-align: center;
-  color: rgba(24, 255, 255, 0.8) !important;
-  background: #010031;
+  /* color: rgba(24, 255, 255, 0.8) !important; */
+  color: white;
+  background: #0b2159;
   box-shadow: 1px 1px 20px rgba(24, 255, 255, 0.5);
   border-radius: 15px !important;
   font-size: 2vw !important;
