--- a/client/src/pages/faq/faq.css
+++ b/client/src/pages/faq/faq.css
@@ -55,7 +55,7 @@
   box-shadow: 1px 1px 15px rgba(24, 255, 255, 0.5);
   border-radius: 24px;
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .faq-container div{
