--- a/client/src/pages/home/home-page.css
+++ b/client/src/pages/home/home-page.css
@@ -661,6 +661,7 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
+overflow: hidden;
 background-color: var(--overlay-color);
 mix-blend-mode: multiply;
 opacity: 0;
@@ -820,9 +821,12 @@ opacity: 1;
     }
     .image-wrapper{
       position: relative;
-      top:-100px;
+      top:-130px;
       left:-25px;
       overflow: hidden;
+    }
+    .image-wrapper:after{
+      position: relative;
     }
     /* .night{
       margin-top: -80px;
