--- a/client/src/pages/dashboard/Dashboard-left.css
+++ b/client/src/pages/dashboard/Dashboard-left.css
@@ -19,7 +19,7 @@ form,label{
 .icon{
   margin-right: 1rem;
   font-size: 2rem;
-  color: rgba(24, 255, 255, 0.8);
+  color: white;
 }
 
 .rs-modal-title{
