--- a/client/src/pages/dashboard/Dashboard-right.css
+++ b/client/src/pages/dashboard/Dashboard-right.css
@@ -82,7 +82,7 @@
   .user-name {
     color: white;
     font-size: 1.5vw;
-    margin-bottom: 5px !important;
+    /* margin-bottom: 5px !important; */
   }
   
   .discord-id {
