--- a/client/src/pages/submission/submission-page.css
+++ b/client/src/pages/submission/submission-page.css
@@ -30,6 +30,7 @@ body {
   backdrop-filter: blur(2rem);
   display: flex;
   float: center;
+ 
 }
 
 .left-submission-container {
@@ -69,20 +70,21 @@ body {
 .submission-form-input {
   margin-bottom: 2em;
   width: 100%;
-  background: #ede4f3;
-  color: #575757;
+  background: #ede4f3 !important;
+  color: #575757 !important;
   font-weight: 500;
   border: none;
   outline: none;
-  border-radius: 2rem;
+  border-radius: 2rem !important;
   padding: .25rem .5rem .5rem 0.8rem;
+  caret-color:#575757 !important ;
 }
 
 .submission-form-btn {
   background-color: #3E006A;
   font-size: 1rem;
   color: white;
-  padding: 1em 4em 1em 4em;
+  /* padding: 1em 4em 1em 4em; */
   text-decoration: none;
   align-self: center;
   border-radius: 2em;
@@ -101,4 +103,13 @@ body {
   font-size: 3em;
   padding: 10px;
   color: #2C0059;
+}
+.head-sub{
+  padding: 2%;
+}
+.sub-link{
+  color: #575757 !important;
+}
+.subm-form{
+  padding: 2%;
 }
