--- a/client/src/pages/dashboard/Dashboard.css
+++ b/client/src/pages/dashboard/Dashboard.css
@@ -115,7 +115,7 @@ box-shadow: 5px 5px 10px #de9db0,
 .rule-m{
   color: white;
 }
-.css-102x5yh-TimelineItemContentWrapper{
+.css-102x5yh-TimelineItemContentWrapper .css-ijw9b3{
   min-height: 0px !important;
 }
 .prof-h{
