--- a/client/src/pages/dashboard/Dashboard-center.css
+++ b/client/src/pages/dashboard/Dashboard-center.css
@@ -129,6 +129,15 @@
 padding-right: 30px;
 }
 
+.card-t{
+  font-size: 1.2em;
+  font-weight: 400;
+}
+.theme-h{
+  color: white;
+  text-align: center;
+}
+
 
 
 
